// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate 11ty app from .csv file 1`] = `
Array [
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/entries/languages-and-frameworks/TypeScript/index.html",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/entries/platforms/Nodejs/index.html",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/entries/techniques/Гексагональная архитектура/index.html",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/entries/tools/codeclimate/index.html",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/favicon.ico",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/index.html",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/radar.css",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/radar.js",
]
`;

exports[`generate 11ty app from .json file 1`] = `
Array [
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/entries/languages-and-frameworks/TypeScript/index.html",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/entries/platforms/Nodejs/index.html",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/entries/techniques/Гексагональная архитектура/index.html",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/entries/tools/codeclimate/index.html",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/favicon.ico",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/index.html",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/radar.css",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/radar.js",
]
`;

exports[`generate 11ty app from .yml file 1`] = `
Array [
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/entries/languages-and-frameworks/TypeScript/index.html",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/entries/platforms/Nodejs/index.html",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/entries/techniques/Гексагональная архитектура/index.html",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/entries/tools/codeclimate/index.html",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/favicon.ico",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/index.html",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/radar.css",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/radar.js",
]
`;

exports[`generate 11ty app from multiple files 1`] = `
Array [
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/entries/languages-and-frameworks/TypeScript/index.html",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/entries/platforms/Nodejs/index.html",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/entries/techniques/Гексагональная архитектура/index.html",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/entries/tools/codeclimate/index.html",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/favicon.ico",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/index.html",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/radar.css",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test/radar.js",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test-2/entries/languages-and-frameworks/TypeScript/index.html",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test-2/entries/platforms/Nodejs/index.html",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test-2/entries/techniques/Гексагональная архитектура/index.html",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test-2/entries/tools/codeclimate/index.html",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test-2/favicon.ico",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test-2/index.html",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test-2/radar.css",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test-2/radar.js",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test-3/entries/languages-and-frameworks/TypeScript/index.html",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test-3/entries/platforms/Nodejs/index.html",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test-3/entries/techniques/Гексагональная архитектура/index.html",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test-3/entries/tools/codeclimate/index.html",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test-3/favicon.ico",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test-3/index.html",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test-3/radar.css",
  "/Users/d.sergienko/IdeaProjects/tech-radar/dist/test-3/radar.js",
]
`;
